--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "htmlpet/language-bg_bg",
+    "name": "ksimeonov/language-bg_bg",
     "description": "Bulgarian language / Български език",
     "version": "100.1.0",
     "license": [
